Revision history for Perl extension HTML::Template::Compiled.

0.97_005
- New feature: option cache_debug
- New feature: TMPL_WRAPPER

0.97_004 Sun May 20 18:38:32 CEST 2012
- Change: Implemented searching the path and search_path_on_include like
  in HTML::Template (finally) and add an additional value. PLEASE TEST!
- Improved file cache performance
- Bugfix: old bug with invalid tags in noparse, verbatim, comment
- Remove old Storable workaround (0.94_002)

0.97_001 Thu May 17 14:54:30 CEST 2012
- fix HTML::Template::Compiled::Classic: allow every character in template
  var names (RT 70676)
- New option expire_time instead of global HTML::Template::Compiled->ExpireTime
- Added loop context vars __even__, __outer__
- Change: removed documentation of class methods ->CaseSensitive,
  ->SearchPathOnInclude, ->UseQuery - will be deprecated
- Added strict option

0.97 Tue May  8 19:19:00 CEST 2012
- regular release, see changes from dev version below

0.96_005 Sun May  6 16:24:54 CEST 2012
- fix t/25_expr.t number of skip tests

0.96_004 Sat May  5 15:56:27 CEST 2012
- Minor bugfix USE_VARS, module version numbers
- Bugfix caching: under certain circumstances some template includes
  were not added to memory cache and reloaded from file cache very time

0.96_003 Fri May  4 17:09:19 CEST 2012
- Improved Feature: expressions like .path.to.hash{var}

0.96_002 Sun Apr 22 19:23:33 CEST 2012
- Changed/New feature: chomp whitespaces globally or in tags
- New feature: SET_VAR (and USE_VARS)

0.96_001 Sat Apr 21 23:17:59 CEST 2012
- New feature: allow expressions like .path.to.hash{var}
- Bugfix: allow more than two binary operands in H::T::C::Expr

0.96 Mon Nov 21 20:37:22 CET 2011
- fixed 05_filter.t
- fixed t/01_HTML-Template-Compiled.t (problems when test takes longer then
  cache expiration)

0.95_003 Sat Nov 12 15:12:02 CET 2011
- Bugfix: Reload includes of includes (required change of caching mechanism -
  please report any issues if you have problems with caching)