@@ -860,6 +860,18 @@ EOM
             my $dynamic = $tname eq T_INCLUDE_VAR ? 1 : 0;
             my $fullpath = "''";
 
+            my $cwd;
+            unless ($self->get_scalar) {
+                $dir      = dirname($fname);
+                if ($self->get_search_path == 1) {
+                }
+                elsif ($self->get_search_path == 2) {
+                    $cwd = $dir;
+                }
+                else {
+                    $path = [ $dir ] ;
+                }
+            }
             if ($dynamic) {
                 # dynamic filename
                 my $dfilename = $attr->{NAME};
@@ -877,31 +889,15 @@ EOM
             else {
                 # static filename
                 $filename = $attr->{NAME};
+                $fullpath = $self->createFilename( [@$path], \$filename, $cwd );
                 if ($self->get_use_query) {
                     $info_stack->[-1]->{lc $filename}->{type} = $tname;
                 }
                 $varstr   = $self->quote_file($filename);
-                my $cwd;
-				unless ($self->get_scalar) {
-					$dir      = dirname($fname);
-					if ($self->get_search_path == 1) {
-					}
-					elsif ($self->get_search_path == 2) {
-						$cwd = $dir;
-					}
-					else {
-						$path = [ $dir ] ;
-					}
-				}
                 # generate included template
                 {
                     D && $self->log("compile include $filename!!");
-                    #warn __PACKAGE__.':'.__LINE__.$".Data::Dumper->Dump([\$self->get_file], ['file']);
-                    #warn __PACKAGE__.':'.__LINE__.$".Data::Dumper->Dump([\$path], ['path']);
-                    #$fullpath = $self->createFilename( [@$path, \$self->get_file], $filename );
-                    $fullpath = $self->createFilename( [@$path], $filename, $cwd );
                     my $recursed = ++$HTML::Template::Compiled::COMPILE_STACK{$fullpath};
-                    #warn __PACKAGE__." fullpath $fullpath ($recursed)\n";
                     if ($recursed <= 1) {
                         my $cached_or_new;
                         $self->compile_early() and $cached_or_new
@@ -909,8 +905,6 @@ EOM
                                 #[@$path, \$self->get_file], $filename, '', $self->get_cache_dir
                               $path, $filename, '', $self->get_cache_dir
                           );
-                          #$fullpath = $cached_or_new->get_file;
-                        #$HTML::Template::Compiled::COMPILE_STACK{"@$path/$filename"} = $fullpath;
                         $self->get_includes()->{$fullpath}
                             = [$path, $filename, $cached_or_new];
                     }
@@ -924,27 +918,27 @@ EOM
               ? '['
               . join( ',', map { $self->quote_file($_) } @$path ) . ']'
               : 'undef';
+            $cwd = defined $cwd ? $self->quote_file($cwd) : 'undef';
             $cache = defined $cache ? $self->quote_file($cache) : 'undef';
             if ($dynamic) {
                 $code .= <<"EOM";
-${indent}\{
-${indent}  if (defined (my \$file = $varstr)) \{
-            my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{$fullpath};
-            #warn "recursed \$recursed\\n";
-            \$HTML::Template::Compiled::FILESTACK{$fullpath} = 0, die "HTML::Template: recursive include of " . $fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
-              if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
-${indent}    my \$include = \$t->get_includes()->{$fullpath};
-${indent}    my \$new = \$include ? \$include->[2] : undef;
-#print STDERR "+++++++got new? \$new\\n";
-${indent}    if (!\$new || HTML::Template::Compiled::needs_new_check($cache||'',\$file,\$t->get_expire_time)) {
-${indent}      \$new = \$t->new_from_object($path,\$file,$fullpath,$cache);
-${indent}    }
-#print STDERR "got new? \$new\\n";
-${indent}    \$new->set_globalstack(\$t->get_globalstack);
-${indent}    $output \$new->get_code()->(\$new,\$P,\$C@{[$out_fh ? ",\$OFH" : '']});
-            --\$HTML::Template::Compiled::FILESTACK{$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{$fullpath};
-${indent}  \}
-${indent}\}
+# ---------- INCLUDE_VAR
+\{
+  if (defined (my \$file = $varstr)) \{
+    my \$fullpath = \$t->createFilename( $path, \\\$file, $cwd );
+    my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{\$fullpath};
+    \$HTML::Template::Compiled::FILESTACK{\$fullpath} = 0, die "HTML::Template: recursive include of " . \$fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
+      if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
+    my \$include = \$t->get_includes()->{\$fullpath};
+    my \$new = \$include ? \$include->[2] : undef;
+    if (!\$new || HTML::Template::Compiled::needs_new_check($cache||'',\$file,\$t->get_expire_time)) \{
+      \$new = \$t->new_from_object($path,\$file,\$fullpath,$cache);
+    \}
+    \$new->set_globalstack(\$t->get_globalstack);
+    $output \$new->get_code()->(\$new,\$P,\$C@{[$out_fh ? ",\$OFH" : '']});
+    --\$HTML::Template::Compiled::FILESTACK{\$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{\$fullpath};
+  \}
+\}
 EOM
             }
             elsif ($tname eq T_WRAPPER) {
@@ -952,8 +946,9 @@ EOM
                 $output = $outputs[-1];
                 my $wrapped = '';
                 $code .= <<"EOM";
-${indent}\{
-${indent}  my \$OUT@{[ scalar @outputs ]};
+# ---------- WRAPPER
+\{
+  my \$OUT@{[ scalar @outputs ]};
 EOM
                 my $argument_fh = 'undef';
                 if ($out_fh) {
@@ -964,19 +959,19 @@ EOM
                     $argument_fh = "\$tmp_fh";
                 }
                 $wrapped .= <<"EOM";
-${indent}  my \$_WRAPPED = \$OUT@{[ scalar @outputs ]};
-${indent}  my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{$fullpath};
-${indent}  \$HTML::Template::Compiled::FILESTACK{$fullpath} = 0, die "HTML::Template: recursive include of " . $fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
-${indent}  if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
-${indent}    my \$include = \$t->get_includes()->{$fullpath};
-${indent}    my \$new = \$include ? \$include->[2] : undef;
-${indent}    if (!\$new) {
-${indent}      \$new = \$t->new_from_object($path,$varstr,$fullpath,$cache);
-${indent}    }
-${indent}    \$new->set_globalstack(\$t->get_globalstack);
-${indent}    $outputs[-2] \$new->get_code()->(\$new,\$P,\$C, $argument_fh, { wrapped => \$_WRAPPED });
-            --\$HTML::Template::Compiled::FILESTACK{$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{$fullpath};
-${indent}  \$OUT@{[ scalar @outputs ]} = '';
+  my \$_WRAPPED = \$OUT@{[ scalar @outputs ]};
+  my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{$fullpath};
+  \$HTML::Template::Compiled::FILESTACK{$fullpath} = 0, die "HTML::Template: recursive include of " . $fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
+  if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
+    my \$include = \$t->get_includes()->{$fullpath};
+    my \$new = \$include ? \$include->[2] : undef;
+    if (!\$new) {
+      \$new = \$t->new_from_object($path,$varstr,$fullpath,$cache);
+    }
+    \$new->set_globalstack(\$t->get_globalstack);
+    $outputs[-2] \$new->get_code()->(\$new,\$P,\$C, $argument_fh, { wrapped => \$_WRAPPED });
+    --\$HTML::Template::Compiled::FILESTACK{$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{$fullpath};
+  \$OUT@{[ scalar @outputs ]} = '';
 EOM
                 if ($out_fh) {
                     $wrapped .= <<"EOM";
@@ -984,28 +979,26 @@ $outputs[-2] \$tmp_var;
 EOM
                 }
                 $wrapped .= <<"EOM";
-${indent}\}
+\}
 EOM
                 push @wrapped, $wrapped;
             }
             else {
                 $code .= <<"EOM";
-${indent}\{
-            my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{$fullpath};
-            #warn "+recursed \$recursed $fullpath\\n";
-            \$HTML::Template::Compiled::FILESTACK{$fullpath} = 0, die "HTML::Template: recursive include of " . $fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
-              if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
-${indent}    my \$include = \$t->get_includes()->{$fullpath};
-${indent}    my \$new = \$include ? \$include->[2] : undef;
-#print STDERR "got new? \$new\\n";
-${indent}    if (!\$new) {
-${indent}      \$new = \$t->new_from_object($path,$varstr,$fullpath,$cache);
-${indent}    }
-#print STDERR "got new? \$new\\n";
-${indent}    \$new->set_globalstack(\$t->get_globalstack);
-${indent}    $output \$new->get_code()->(\$new,\$P,\$C@{[$out_fh ? ",\$OFH" : '']});
-            --\$HTML::Template::Compiled::FILESTACK{$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{$fullpath};
-${indent}\}
+# ---------- INCLUDE
+\{
+  my \$recursed = ++\$HTML::Template::Compiled::FILESTACK{$fullpath};
+  \$HTML::Template::Compiled::FILESTACK{$fullpath} = 0, die "HTML::Template: recursive include of " . $fullpath . " \$recursed times (max \$HTML::Template::Compiled::MAX_RECURSE)"
+  if \$recursed > \$HTML::Template::Compiled::MAX_RECURSE;
+    my \$include = \$t->get_includes()->{$fullpath};
+    my \$new = \$include ? \$include->[2] : undef;
+    if (!\$new) {
+      \$new = \$t->new_from_object($path,$varstr,$fullpath,$cache);
+    }
+    \$new->set_globalstack(\$t->get_globalstack);
+    $output \$new->get_code()->(\$new,\$P,\$C@{[$out_fh ? ",\$OFH" : '']});
+    --\$HTML::Template::Compiled::FILESTACK{$fullpath} or delete \$HTML::Template::Compiled::FILESTACK{$fullpath};
+\}
 EOM
             }
         }
